# DevOps-Course-Starter

./: .dockerignore  .env.disable  .env.template  .env.test  .gitignore  .travis.yml  Dockerfile  Dockerfile - with_test_stuff_in_do_not_del  README.md  Vagrantfile  Vagrantfile.bak  banana.py  command_line_env.env  docker-compose.yml  docker_run_test_dev_mount.bat  env.bat  logs.txt  pyproject.toml  requirements.txt  requirements.txt2  test.json  vagrant_provision_script.sh  vagrant_trigger_script.sh  wsgi.py
docker_scripts/: docker_run_dev_mount.bat  docker_run_test_command_prompt_with_env_vars.bat
documentation/: component.drawio  container.drawio  context.drawio
todo_app/: TrelloTest.py  app.py  flask_config.py  flask_config.py.not_neeed  trello.secrets
todo_app/data/: item.py  mongodb.py  session_items.py  trello_items.py  user.py
todo_app/flask_app/: flask_app.py
todo_app/templates/: index - Copy.html  index.html  layout.html  test.html
todo_app/tests/: test_client.py  test_data.py  test_trello.py  test_trello2.py  test_view_model.py  test_vm.py
todo_app/tests_e2e/: test_app.py
todo_app/trello/: TrelloBase.py  TrelloBoard.py  trello_api.py  trello_api2.py  trello_base.py  trello_item.py  trello_list.py
todo_app/trello/completly_wrong_we_do_not_want_state_in_the_app/: TrelloCard.py  TrelloList.py
todo_app/view_models/: trello_view_model.py  view_model.py
